# testing

./: .env.example  .gitignore  .openhands_instructions  .pre-commit-config.yaml  README.md  __main__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.openhands/microagents/: Guard_code_agent.md  account_model_agent.md  add_tables_to_menus_agent.md  add_use_cases_phase1_with_country_data_agent.md  architecture_rules_agent.md  atomic_menu_wiring_agent.md  bash_python.md  call_menu_agent.md  cli_renderer_agent.md  config_menu_agent.md  core_account_agent.md  core_call_agent.md  core_logs_agent.md  core_message_agent.md  country_loader_agent.md  fix_manage_flow_agent.md  fix_purchase_command_metadata_agent.md  fix_purchase_flow_agent.md  fix_settings_flow_agent.md  gateway_and_env_phase2_agent.md  git_tools_agent.md  init.md  init_mcp.md  locality_input_agent.md  logging_and_export_agent.md  logs_menu_agent.md  manage_menu_agent.md  menu_system_agent.md  message_model_agent.md  messaging_config_agent.md  number_actions_agent.md  phone_number_core_agent.md  phone_number_model_agent.md  pip_and_argparse_cli_agent.md  project_scaffold_agent.md  project_skeletons_agent.md  purchase_confirm_agent.md  purchase_menu_agent.md  refactor_menus_agent.md  refactor_models_agent.md  (+12 more)
app/: cli.py
app/core/: account.py  call.py  logs.py  manage.py  message.py  phone_number.py  purchase.py  settings.py
app/gateways/: config.py  file_logger.py  http_gateway.py  twilio_gateway.py
app/models/: account_model.py  country_data.py  message_model.py  phone_number_model.py
(+39 files in other folders)
